# textarium

./: 404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: ci.yml
docs/: extraction-ref.md  preprocessing-ref.md
getting-started/: index.html
installation/: index.html
preprocessing-ref/: index.html
search/: search_index.json
textarium/: extraction.py  preprocessing.py  text.py
textarium/tests/: test_extraction.py  test_preprocessing.py  test_text.py
