[tool.poetry]
name = "textarium"
version = "0.1.0"
description = "Package for text cleaning and processing"
authors = ["6b656b"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.3"
setuptools = "^65.6.3"


[tool.poetry.group.test.dependencies]
unittest = "^0.0"
nose = "^1.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
